# myagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yaml  myagent-gateway.service  pyproject.toml  requirements.txt  run.bat  run.sh
config/: default.yaml
docs/: DESIGN_v2.2.md  DESIGN_v3.0.md  HIGH_LEVEL_DESIGN.md  HIGH_LEVEL_DESIGN_CN.md  MYAGENT_MANUAL_v2.0.md
skills/ai-writing-assistant-cn/: _meta.json
skills/ai-writing-assistant-cn/.clawhub/: origin.json
skills/autonomous-research/: _meta.json
skills/autonomous-research/.clawhub/: origin.json
skills/brave-images/: _meta.json
skills/brave-images/.clawhub/: origin.json
skills/ceo-advisor/: _meta.json
skills/chart-image/: _meta.json
skills/code-share/: _meta.json
skills/code-share/.clawhub/: origin.json
skills/translator/: SKILL.md
src/: __init__.py  config.py  main.py  security.py
src/agent/: __init__.py  intent.py  orchestrator.py  planner.py  subagent.py
src/gateway/: __init__.py  dashboard.py  server.py  watchdog.py
src/llm/: __init__.py  fallback.py  router.py
src/memory/: __init__.py  consolidator.py  episodic.py  manager.py  semantic.py  user_model.py  working.py
src/scheduler/: __init__.py  cron.py
src/skills/: __init__.py  discovery.py  executor.py  learner.py  parser.py  registry.py
src/tools/: __init__.py  _security_utils.py  base.py  calendar.py  data_analysis.py  deep_search.py  email.py  exec.py  feishu_api.py  file_edit.py  file_read.py  file_write.py  search_engine.py  web_fetch.py  web_search.py
(+19 files in other folders)
