[project]
name = "myagent"
version = "0.5.1"
description = "Personal Office Assistant Agent - OpenClaw Skills Compatible"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "aiofiles>=23.0",
    "aiosmtplib>=1.1",
    "apscheduler>=3.10",
    "python-multipart>=0.0.6",
    "sqlite-vec>=0.1",
    "lxml>=5.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "lark-oapi>=1.6",
    "aiogram>=3.15",
]

[project.scripts]
myagent = "src.main:main"
